[metadata]
name = sldp
version = 1.1.4
author = Yakir Reshef
author_email = yreshef@broadinstitute.org
description = Signed LD profile regression
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/yakirr/sldp
project_urls =
    Bug Tracker = https://github.com/yakirr/sldp/issues
    Tutorial = https://github.com/yakirr/sldp/blob/master/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires = 
        numpy
        pandas>=2
        scipy
        matplotlib
        gprim
        ypy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sldp = sldp.sldp:main
    preprocessannot = sldp.preprocessannot:main
    preprocesspheno = sldp.preprocesspheno:main
    preprocessrefpanel = sldp.preprocessrefpanel:main